client/blocks/reader-subscription-list-item/style.scss
.reader-subscription-list-item {
	display: flex;
	flex-direction: row;
}

.reader-subscription-list-item__byline {
	color: darken( $gray, 30% );
	flex: 1 0 0;
	padding-right: 10px;
}

.reader-subscription-list-item__options {
	display: flex;
	flex-direction: column;

	.button.follow-button {
		display: flex;
		justify-content: flex-end;
	}
}

.reader-subscription-list-item__site-excerpt {
	display: block;
	max-height: 16px * 2.8;
	overflow: hidden;
	text-overflow: ellipsis;
	position: relative;
	width: 100%;

	@include breakpoint( ">660px" ) {
		max-height: 16px * 1.4;
	}

	&::after{
		height: 16px * 1.4;
		top: auto;
	}

	&:not(.is-placeholder) {
		&::after {
			@include long-content-fade( $size: 20% );
		}
	}
}

.reader-subscription-list-item__link,
.reader-subscription-list-item__link:visited {
	color: $blue-medium;

	&:hover {
		color: $blue-light;
	}
}

.reader-subscription-list-item__by-text .reader-subscription-list-item__link {
	color: darken( $gray, 30% );
}

.reader-subscription-list-item .gravatar {
	float: left;
	margin: 2px 8px 0 0;
	height: 32px;
	min-height: 32px;
	min-width: 32px;
}

.reader-subscription-list-item {
	display: flex;
	font-size: 14px;
	padding: 15px 0;

	@include breakpoint( "<660px" ) {
		margin: 0 15px;
	}
}

.reader-subscription-list-item__site-url,
.reader-subscription-list-item__site-url:visited {
	color: lighten( $gray, 10% );
}

.reader-subscription-list-item__site-title,
.reader-subscription-list-item__by-text,
.reader-subscription-list-item__site-url {
	display: block;
	height: 20px;
	overflow: hidden;
	text-overflow: ellipsis;
	position: relative;
	width: 100%;
	word-break: break-all;

	&::after{
		@include long-content-fade( $size: 20% );
	}
}

.reader-subscription-list-item__site-title {
	font-weight: 600;
}

.reader-subscription-list-item .follow-button {
	border: 0;
	padding: 0;

	.gridicon {
		fill: $blue-medium;

		@include breakpoint( "<660px" ) {
			left: 3px;
		}
	}

	.follow-button__label {
		color: $blue-medium;
	}

	&.is-following {

		.gridicon {
			fill: $alert-green;
		}

		.follow-button__label {
			color: $alert-green;
		}
	}
}

.reader-subscription-list-item .gridicons-cog {
	fill: lighten( $gray, 10% );
	height: 18px;
	padding-right: 7px;
	position: relative;
		left: 5px;
		top: 4px;
	width: 18px;

	@include breakpoint( ">660px" ) {
		left: 4px;
	}
}

.reader-subscription-list-item .follow-button .gridicon {
	height: 24px;
	top: 2px;
}

.reader-subscription-list-item .follow-button__label,
.reader-subscription-list-item .reader-subscription-list-item__settings-label {

	@include breakpoint( "<660px" ) {
		display: none;
	}
}

.reader-subscription-list-item__settings-menu {
	color: $gray;
	padding-left: 0;

	@include breakpoint( ">660px" ) {
		padding-left: 8px;
	}
}

// Settings popover
.reader-subscription-list-item__email-popout-wrapper {
	display: flex;
	flex-direction: column;
	min-width: 250px;
}

.reader-subscription-list-item__email-popout-header {
	border-bottom: 1px solid lighten( $gray, 20% );
	font-size: 14px;
	display: flex;
	justify-content: flex-start;
	color: $gray-dark;
	padding: 10px 0 10px 15px;
}

.reader-subscription-list-item__settings-menu:hover {
	cursor: pointer;
}

.reader-subscription-list-item__settings-menu-popout.popover .popover__inner {
	background-color: $gray-light;
	border-color: lighten( $gray, 20% );
}

// Popover arrows
.reader-subscription-list-item__settings-menu-popout.popover.is-bottom-left .popover__arrow::before,
.reader-subscription-list-item__settings-menu-popout.popover.is-top-left .popover__arrow::before {
	border: 10px solid $gray-light;
	content: " ";
	position: absolute;
	left: 50%;
	margin-left: -10px;
	border-left-color: transparent;
	border-right-color: transparent;
}

.reader-subscription-list-item__settings-menu-popout.popover.is-bottom-left .popover__arrow::before {
	top: 2px;
	border-bottom-style: solid;
	border-top: none;
}

.reader-subscription-list-item__settings-menu-popout.popover.is-top-left .popover__arrow::before {
	bottom: 2px;
    border-top-style: solid;
    border-bottom: none;
}

.reader-subscription-list-item__email-popout-toggle {
	color: $gray-dark;
	display: flex;
	justify-content: space-between;
	font-size: 14px;
	margin: 10px 0 10px 15px;
}

.reader-subscription-list-item__email-popout-wrapper .segmented-control {
	background: inherit;
	padding: 0 12px 0 16px;
}

.reader-subscription-list-item__email-popout-wrapper .segmented-control__link {
	background: $white;
}

.reader-subscription-list-item__site-url,
.reader-subscription-list-item__site-url:visited {
	color: lighten( $gray, 10% );
	display: block;
	height: 20px;
	overflow: hidden;
	position: relative;
	width: 100%;
	word-break: break-all;
}

// Placeholders
.reader-subscription-list-item.reader-subscription-list-item__placeholder {
	.reader-subscription-list-item__site-title,
	.reader-subscription-list-item__site-excerpt,
	.reader-subscription-list-item__by-text,
	.reader-subscription-list-item__site-url,
	.reader-subscription-list-item__follow {
		@include placeholder();
	}

	.reader-subscription-list-item__site-excerpt {
		margin-top: 2px;
	}

	.reader-subscription-list-item__site-title {
		max-width: 60%;
	}

	.reader-subscription-list-item__site-excerpt {
		max-width: 80%;
	}

	.reader-subscription-list-item__site-url {
		max-width: 40%;
		margin-top: -1px;
	}

	.reader-subscription-list-item__follow {
		width: 20px;
		height: 20px;

		@include breakpoint( ">660px" ) {
			width: 16px * 1.5 * 3;
		}
	}
}

